[package]
name = "lru_cache"
version = "0.1.0"
edition = "2021"
authors = ["Votre Nom <votre@email.com>"]
description = "Une implémentation de cache LRU en Rust"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "cache_benchmark"
harness = false